ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: db-gw

---
kind: Namespace
apiVersion: v1
metadata:
  name: ns1 

---
kind: Namespace
apiVersion: v1
metadata:
  name: ns2
